Fixed button wrap

--- a/src/containers/SubscriptionsPage/SubscriptionsPage.module.css
+++ b/src/containers/SubscriptionsPage/SubscriptionsPage.module.css
@@ -87,6 +87,8 @@ p {
 
 .headerButtonContainer {
   margin-right: 2rem;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 /* Title of the modal */
